s3fuse (0.14) unstable; urgency=low

  * NEW: Multipart (resumable) uploads for Google Cloud Storage.
  * NEW: Support for FV/S.
  * NEW: Set file content type by examining extension.

 -- Tarick Bedeir <tarick@bedeir.com>  Sun, 24 Feb 2013 18:23:12 -0600

s3fuse (0.13.1) unstable; urgency=low

  * OS X: Fixed bug that resulted in command-line arguments being ignored.

 -- Tarick Bedeir <tarick@bedeir.com>  Fri, 15 Feb 2013 20:06:26 -0600

s3fuse (0.13) unstable; urgency=low

  * NEW: File encryption. See README.
  * NEW: Glacier restore requests. See README.
  * NEW: Add least-recently-used eviction to object cache, controlled by the
    max_objects_in_cache configuration option.
  * NEW: OS X binaries.
  * IMPORTANT: Removed "auth_data" configuration option. For AWS, use
    "aws_secret_file" instead. For Google Storage, use "gs_token_file".
  * IMPORTANT: Search for configuration file in ~/.s3fuse/s3fuse.conf before
    trying %sysconfdir/s3fuse.conf (this is usually /etc/s3fuse.conf or
    /usr/local/s3fuse.conf).
  * Switched to SHA256 for file integrity check. File hash, if available, will 
    be in the "s3fuse_sha256" extended attribute.
  * Added standalone SHA256 hash generator ("s3fuse_sha256_hash") that uses the
    same hash-list method as s3fuse.
  * Changed handling of last-modified times. Some timestamps may be inaccurate 
    (but will be correct when updated).
  * Renamed built-in extended attributes "__content_type__" and "__etag__" to 
    "s3fuse_content_type" and "s3fuse_etag", respectively.
  * Removed "__md5__" extended attribute.
  * Added note about daemon_timeout.
  * Removed xattr_prefix configuration option and made "user." standard (Linux
    only).
  * Added event counters/statistics ("stats_file" config option).
  * Made "noappledouble" and "daemon_timeout=3600" default options on OS X.
  * Various robustness fixes.
  * Add manual pages.

 -- Tarick Bedeir <tarick@bedeir.com>  Sun, 10 Feb 2013 10:51:16 -0600
